added image upload functionality to restaurant hero section
